--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-*{
-    padding: 0;
-    margin:0;
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.sosmed {
+  height: 3.125em;
+  width: 3.125em;
+  border-radius: 0.625em;
+  -webkit-border-radius: 0.625em;
+  -moz-border-radius: 0.625em;
+  -ms-border-radius: 0.625em;
+  -o-border-radius: 0.625em;
 }
