--- a/style.css
+++ b/style.css
@@ -3,12 +3,31 @@
   margin: 0;
 }
 
+body {
+  background-image: url(tools/background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.judul {
+  text-align: center;
+  margin-top: 30px;
+}
+
 .sosmed {
   height: 3.125em;
   width: 3.125em;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
   border-radius: 0.625em;
   -webkit-border-radius: 0.625em;
   -moz-border-radius: 0.625em;
   -ms-border-radius: 0.625em;
   -o-border-radius: 0.625em;
+}
+
+.zoom-effect:hover .sosmed {
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
