--- a/style.css
+++ b/style.css
@@ -12,7 +12,13 @@ body {
 
 .judul {
   text-align: center;
-  margin-top: 30px;
+  margin: 20px auto;
+  font-size: 22px;
+  font-weight: 700;
+  color: white;
+  word-spacing: 1px;
+  letter-spacing: 2px;
+  padding-block: 2px;
 }
 
 .sosmed {
