--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 
 body {
   background-image: url(tools/background.jpg);
+  font-family: "Baloo 2", cursive;
+  font-size: 16px;
+  color: #ffffff;
+  text-rendering: optimizeLegibility;
+  font-weight: initial;
 }
 
 .judul {
@@ -33,4 +38,7 @@ body {
 .zoom-effect:hover .sosmed {
   -webkit-transform: scale(1.08);
   transform: scale(1.08);
+  -moz-transform: scale(1.08);
+  -ms-transform: scale(1.08);
+  -o-transform: scale(1.08);
 }
